[gd_scene load_steps=12 format=3 uid="uid://bbtaefxnnc82p"]

[ext_resource type="Script" path="res://scenes/test/sound_visualization_demo.gd" id="1"]
[ext_resource type="Script" uid="uid://cc2dv7mq0tqbu" path="res://scripts/components/track/track_system.gd" id="2"]
[ext_resource type="Script" uid="uid://cu4t4d053muh1" path="res://scripts/components/sound/lane_sound_system.gd" id="3"]
[ext_resource type="Script" uid="uid://djqprxlna61a2" path="res://scripts/components/vehicle/rhythm_vehicle_with_lanes.gd" id="4"]
[ext_resource type="Script" uid="uid://6tv04gupj4mf" path="res://scripts/components/visual/rhythm_feedback_manager.gd" id="5"]
[ext_resource type="Script" path="res://scripts/components/visual/environment_visualizer.gd" id="6"]
[ext_resource type="Script" path="res://scripts/components/visual/lane_sound_visualizer.gd" id="7"]
[ext_resource type="Script" path="res://scripts/components/visual/beat_pulse_visualizer.gd" id="8"]
[ext_resource type="Script" path="res://scripts/components/visual/sound_reactive_trail.gd" id="9"]

[sub_resource type="Theme" id="2"]
default_font_size = 16

[sub_resource type="StyleBoxFlat" id="3"]
content_margin_left = 20.0
content_margin_top = 20.0
content_margin_right = 20.0
content_margin_bottom = 20.0
bg_color = Color(0.1, 0.1, 0.15, 0.8)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[node name="SoundVisualizationDemo" type="Node2D"]
script = ExtResource("1")

[node name="TrackSystem" type="Node2D" parent="."]
script = ExtResource("2")

[node name="LaneSoundSystem" type="Node" parent="."]
script = ExtResource("3")

[node name="RhythmVehicle" type="CharacterBody2D" parent="."]
position = Vector2(512, 300)
script = ExtResource("4")

[node name="BeatPulseVisualizer" type="Node2D" parent="RhythmVehicle"]
script = ExtResource("8")
pulse_scale = 1.3
pulse_duration = 0.15
pulse_color = Color(1, 0.8, 0.2, 1)
glow_radius = 60.0

[node name="SoundReactiveTrail" type="Line2D" parent="RhythmVehicle"]
z_index = -1
script = ExtResource("9")
max_points = 75
point_lifetime = 1.5
base_width = 15.0
max_width = 50.0

[node name="RhythmFeedbackManager" type="Node" parent="."]
script = ExtResource("5")

[node name="EnvironmentVisualizer" type="Node2D" parent="."]
z_index = -10
script = ExtResource("6")
track_border_enabled = true
border_pulse_intensity = 2.0
background_enabled = true
background_grid_size = 40
ambient_particles_enabled = true
particle_count = 150
enhance_beat_markers = true

[node name="LaneSoundVisualizer" type="Node2D" parent="."]
z_index = -5
position = Vector2(512, 300)
script = ExtResource("7")
waveform_height = 80.0

[node name="UI" type="CanvasLayer" parent="."]

[node name="InfoPanel" type="Panel" parent="UI"]
offset_left = 20.0
offset_top = 20.0
offset_right = 320.0
offset_bottom = 200.0
theme = SubResource("2")
theme_override_styles/panel = SubResource("3")

[node name="VBoxContainer" type="VBoxContainer" parent="UI/InfoPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="InfoLabel" type="Label" parent="UI/InfoPanel/VBoxContainer"]
layout_mode = 2
text = "Sound Visualization Demo"
autowrap_mode = 2

[node name="HSeparator" type="HSeparator" parent="UI/InfoPanel/VBoxContainer"]
layout_mode = 2

[node name="ControlsLabel" type="Label" parent="UI/InfoPanel/VBoxContainer"]
layout_mode = 2
text = "Controls:"
autowrap_mode = 2

[node name="ControlPanel" type="Panel" parent="UI"]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -320.0
offset_top = 20.0
offset_right = -20.0
offset_bottom = 400.0
theme = SubResource("2")
theme_override_styles/panel = SubResource("3")

[node name="VBoxContainer" type="VBoxContainer" parent="UI/ControlPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="UI/ControlPanel/VBoxContainer"]
layout_mode = 2
text = "Settings"

[node name="HSeparator" type="HSeparator" parent="UI/ControlPanel/VBoxContainer"]
layout_mode = 2

[node name="BPMLabel" type="Label" parent="UI/ControlPanel/VBoxContainer"]
layout_mode = 2
text = "BPM: 120"

[node name="BPMSlider" type="HSlider" parent="UI/ControlPanel/VBoxContainer"]
layout_mode = 2
min_value = 60.0
max_value = 240.0
step = 10.0
value = 120.0

[node name="HSeparator2" type="HSeparator" parent="UI/ControlPanel/VBoxContainer"]
layout_mode = 2

[node name="EffectsLabel" type="Label" parent="UI/ControlPanel/VBoxContainer"]
layout_mode = 2
text = "Visual Effects:"

[node name="EffectToggles" type="VBoxContainer" parent="UI/ControlPanel/VBoxContainer"]
layout_mode = 2
